# simple_aruco_detector

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
launch/: detector.launch  filter_marker.launch  marker_filter.launch
scripts/: marker_filter.py
src/: simple_aruco_detector_node.cpp
