<?xml version="1.0"?>
<package format="2">
    <name>simple_aruco_detector</name>
    <version>0.1.0</version>
    <description>The simple_aruco_detector package, detects aruco markers and publishes their TFs in the camera frame.</description>
    <author email="vitaliy.e.prooks@gmail.com">Vitaliy Prooks                    </author>
    <maintainer email="vitaliy.e.prooks@gmail.com">Vitaliy Prooks</maintainer>
    <license>MIT</license>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>image_geometry</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>tf2_ros</build_depend>
    <build_depend>tf2</build_depend>
    <exec_depend>cv_bridge</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>image_geometry</exec_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>tf2_ros</exec_depend>
    <exec_depend>tf2</exec_depend>
</package>